--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,20 +1,23 @@
-<table>
-  <tr>
-    <th>First Name</th>
-    <th>Last Name</th>
-    <th>Status</th>
-    <th>Email</th>
-    <th>Created at</th>
-  </tr>
-  <% @paginatedUsers.each do |user|%>
+<% unless @paginatedUsers.empty? %>
+  <table>
     <tr>
-      <td><%= user['first_name'] %></td>
-      <td><%= user['last_name'] %></td>
-      <td><%= user['status'] %></td>
-      <td><%= user['email'] %></td>
-      <td><%= user['created_at'] %></td>
+      <th>First Name</th>
+      <th>Last Name</th>
+      <th>Status</th>
+      <th>Email</th>
+      <th>Created at</th>
     </tr>
-  <% end %>
-</table>
-
-<%= will_paginate @paginatedUsers %>
+    <% @paginatedUsers.each do |user|%>
+      <tr>
+        <td><%= user['first_name'] %></td>
+        <td><%= user['last_name'] %></td>
+        <td><%= user['status'] %></td>
+        <td><%= user['email'] %></td>
+        <td><%= user['created_at'] %></td>
+      </tr>
+    <% end %>
+  </table>
+  <%= will_paginate @paginatedUsers %>
+  <% else %>
+  <%= button_to 'Load users data', '/get_users', method: :get %>
+<% end %>
